# financial_assistant

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
dashboard/: app.py
specs/: architecture.md  dashboard.md  data-model.md  deployment.md  roadmap.md  sources.md  valuation.md
src/networth/: __init__.py  agent.py  config.py  ingest.py  normalize.py  pipeline.py  rates.py  revalue.py  storage.py
src/networth/sources/: __init__.py  base.py  fx.py  gold.py
tests/: conftest.py  make_fixture.py  test_normalize.py  test_revalue.py
tests/fixtures/: sample.sqlite
