[project]
name = "networth"
version = "0.1.0"
description = "Truthful multi-currency net-worth tracker built from Budget Flow backups"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "requests>=2.31",
    "boto3>=1.34",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.40", "plotly>=5.24"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/networth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
